# fon_proposal_writer

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  UI.md  app.py  cache_examine.ipynb  config.yaml  docker-compose.yml  logging_config.py  main-old.py  main.py  next-dev.md  oh-main.py  prefect-automations.yaml  pyproject.toml  test1.ipynb
.openhands/: TASKS.md
app/: app.py  main-old.py  main.py  next-dev.md  oh-main.py  pyproject.toml
app/scripts/: test_highergov_quick.py  test_highergov_quick_old.py
backend/: Dockerfile  config.py  pyproject.toml
backend/api/: main.py  models.py  routes.py
backend/prefect_flows/: extraction_flow.py  tasks.py
docs/: Extract_Test_2_Playbook.md
frontend/: Dockerfile  app.py  pyproject.toml
frontend/.streamlit/: config.toml
raw_llm/: batch_classify_raw_000001.txt  batch_classify_raw_000002.txt  batch_classify_raw_000003.txt  batch_classify_raw_000004.txt  batch_classify_raw_000005.txt  batch_classify_raw_000006.txt  batch_classify_raw_000007.txt  batch_classify_raw_000008.txt  batch_classify_raw_000009.txt  batch_classify_raw_000010.txt  batch_classify_raw_000011.txt  batch_classify_raw_000012.txt  batch_classify_raw_000013.txt  batch_classify_raw_000014.txt  batch_classify_raw_000015.txt  batch_classify_raw_000016.txt  batch_classify_raw_000017.txt  batch_classify_raw_000018.txt  batch_classify_raw_000019.txt  batch_classify_raw_000020.txt  batch_classify_raw_000021.txt  batch_classify_raw_000022.txt  batch_classify_raw_000023.txt  batch_classify_raw_000024.txt  batch_classify_raw_000025.txt  batch_classify_raw_000026.txt  batch_ground_raw_000001.txt  batch_ground_raw_000002.txt  batch_ground_raw_000003.txt  batch_ground_raw_000004.txt  batch_ground_raw_000005.txt  batch_ground_raw_000006.txt  batch_ground_raw_000007.txt  batch_ground_raw_000008.txt  batch_ground_raw_000009.txt  batch_ground_raw_000010.txt  batch_ground_raw_000011.txt  batch_ground_raw_000012.txt  batch_ground_raw_000013.txt  batch_ground_raw_000014.txt  (+342 more)
src/: config.py
(+28 files in other folders)
